// Copyright 2025 Author(s) of MCP Any
// SPDX-License-Identifier: Apache-2.0

edition = "2023";

package mcpany.admin.v1;

option go_package = "github.com/mcpany/core/proto/admin/v1";
option java_outer_classname = "AdminProto";

import "proto/config/v1/upstream_service.proto";
import "proto/mcp_router/v1/mcp_router.proto";

// AdminService provides administrative operations for the MCP Any server.
service AdminService {
  // ClearCache clears all cached data in the server.
  rpc ClearCache(ClearCacheRequest) returns (ClearCacheResponse);

  // ListServices returns all registered upstream services.
  rpc ListServices(ListServicesRequest) returns (ListServicesResponse);

  // GetService returns the configuration of a specific upstream service.
  rpc GetService(GetServiceRequest) returns (GetServiceResponse);

  // ListTools returns all registered tools.
  rpc ListTools(ListToolsRequest) returns (ListToolsResponse);

  // GetTool returns the definition of a specific tool.
  rpc GetTool(GetToolRequest) returns (GetToolResponse);
}

message ClearCacheRequest {}

message ClearCacheResponse {}

message ListServicesRequest {}

message ListServicesResponse {
  repeated ServiceSummary services = 1;
}

message ServiceSummary {
  string id = 1;
  string name = 2;
}

message GetServiceRequest {
  string id = 1;
}

message GetServiceResponse {
    mcpany.config.v1.UpstreamServiceConfig config = 1;
}

message ListToolsRequest {
    string service_id = 1; // Optional filter by service ID
}

message ListToolsResponse {
    repeated mcpany.mcp_router.v1.Tool tools = 1;
}

message GetToolRequest {
    string name = 1;
}

message GetToolResponse {
    mcpany.mcp_router.v1.Tool tool = 1;
}
